# smart_ai_analyzer

./: .replit  pyproject.toml  replit.nix  simple_financial_api.py  simple_server.py  theme.json
api/: ai_chat.py  auth.py  database.py  finance_scraper.py  main.py  models.py  pdf_processor.py  routes.py
client/src/: App.tsx
client/src/components/: BudgetProgress.tsx  ChatInterface.tsx  ChatMessage.tsx  ExpenseChart.tsx  FinancialDashboard.tsx  PortfolioChart.tsx  Sidebar.tsx  TopBar.tsx  UpcomingBills.tsx
client/src/lib/: api.ts  types.ts
client/src/pages/: Dashboard.tsx  Login.tsx  Onboarding.tsx
server/: index.ts  python-bridge.ts  routes.ts  storage.ts
shared/: schema.ts
