[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-groq>=0.2.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "motor>=3.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.2",
    "pypdf>=5.3.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
    "chromadb>=0.6.3",
    "tavily-python>=0.5.1",
]
